Istio-version/assests/docker-game-core/app.yaml
kind: Service
apiVersion: v1
metadata:
  name: mud
  annotations:
    # cloud.google.com/neg: '{"ingress": true}'
    # beta.cloud.google.com/backend-config: '{"ports": {"9999":"mud-backendconfig"}}'
spec:
  sessionAffinity: ClientIP 
  selector:
    app: mud
  ports:
  - protocol: TCP
    port: 11112
    name: mud
    targetPort: 11112
#   type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mud
spec:
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
        #   maxUnavailable: 25%
    selector:
        matchLabels:
            app: mud
    replicas: 1
    template:
        metadata:
            labels:
                app: mud
        spec:
            # affinity:
            #     nodeAffinity:
            #       requiredDuringSchedulingIgnoredDuringExecution:
            #         nodeSelectorTerms:
            #         - matchExpressions:
            #           - key: dedicated
            #             operator: In
            #             values: 
            #             - mud
            # tolerations:
            #     - key: dedicated
            #       operator: Equal
            #       value: mud
            #       effect: NoSchedule
            containers:
            -   name: mud
                image: gcr.io/kalschi-istio/mud:gke-v33
                imagePullPolicy: Always
                ports:
                    -   name: ws
                        containerPort: 11112
                livenessProbe:
                    tcpSocket:
                        port: 11112
                    initialDelaySeconds: 30
                readinessProbe:
                    tcpSocket:
                        port: 11112
                    initialDelaySeconds: 30
                resources:
                    requests:
                        cpu: 100m
                        memory: 3.5G
