Istio-version/assests/docker-game-core/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mud-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mud-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - mud-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mud
      weight: 100
